[gd_scene load_steps=7 format=3 uid="uid://cywt3u5la78gj"]

[ext_resource type="Theme" uid="uid://cvajmynjpho7q" path="res://Assets/UI/main_theme.tres" id="1_5t0eu"]
[ext_resource type="Texture2D" uid="uid://bfxlikw2pt0st" path="res://Assets/UI/divider-fade-003.png" id="1_hqi70"]
[ext_resource type="Texture2D" uid="uid://cxp7iqs0surr8" path="res://Assets/Sky/Stars Sphere.jpg" id="2_il4jq"]
[ext_resource type="Script" path="res://Scenes/main_menu.gd" id="2_oy23m"]
[ext_resource type="AudioStream" uid="uid://cghbqudqs0np6" path="res://Assets/Audio/Music/menu-theme.mp3" id="5_gw0gy"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_vplel"]
color = Color(0.0352941, 0.211765, 0.34902, 1)
thickness = 13

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_5t0eu")
script = ExtResource("2_oy23m")

[node name="BG" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_il4jq")
expand_mode = 2
stretch_mode = 6

[node name="Main Screen" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="Main Container" type="VBoxContainer" parent="Main Screen"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Title" type="HBoxContainer" parent="Main Screen/Main Container"]
modulate = Color(0.254902, 0.678431, 1, 1)
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Main Screen/Main Container/Title"]
layout_mode = 2
texture = ExtResource("1_hqi70")
stretch_mode = 3
flip_h = true

[node name="Label" type="Label" parent="Main Screen/Main Container/Title"]
layout_mode = 2
text = "Galactic Abberation"

[node name="TextureRect2" type="TextureRect" parent="Main Screen/Main Container/Title"]
layout_mode = 2
texture = ExtResource("1_hqi70")
stretch_mode = 3

[node name="Menu" type="VBoxContainer" parent="Main Screen/Main Container"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="Start" type="Button" parent="Main Screen/Main Container/Menu"]
layout_mode = 2
size_flags_horizontal = 4
text = "Start"

[node name="Options" type="Button" parent="Main Screen/Main Container/Menu"]
layout_mode = 2
size_flags_horizontal = 4
text = "Options"

[node name="Credits" type="Button" parent="Main Screen/Main Container/Menu"]
layout_mode = 2
size_flags_horizontal = 4
text = "Credits
"

[node name="Quit" type="Button" parent="Main Screen/Main Container/Menu"]
layout_mode = 2
size_flags_horizontal = 4
text = "Quit"

[node name="Credits" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="Main Container" type="VBoxContainer" parent="Credits"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Title" type="HBoxContainer" parent="Credits/Main Container"]
modulate = Color(0.254902, 0.678431, 1, 1)
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Credits/Main Container/Title"]
layout_mode = 2
texture = ExtResource("1_hqi70")
stretch_mode = 3
flip_h = true

[node name="Label" type="Label" parent="Credits/Main Container/Title"]
layout_mode = 2
text = "Credits"

[node name="TextureRect2" type="TextureRect" parent="Credits/Main Container/Title"]
layout_mode = 2
texture = ExtResource("1_hqi70")
stretch_mode = 3

[node name="Menu" type="VBoxContainer" parent="Credits/Main Container"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="Label" type="RichTextLabel" parent="Credits/Main Container/Menu"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "Game music : [color=\"31b0b0\"]Michael Grubb [color=\"f48\"]@uppbeat.io
[color=]Menu music : [color=\"31b0b0\"]Danijel Zambo [color=\"f48\"]@uppbeat.io
[color=]game over music : [color=\"31b0b0\"]TipTopTomCat [color=\"f54\"]@itch.io
[color=]Art 2D/3D : [color=\"31b0b0\"]kenny [color=\"7f5\"]@kenny"
fit_content = true

[node name="credits back" type="Button" parent="Credits/Main Container"]
layout_mode = 2
size_flags_horizontal = 4
text = "Back"

[node name="Options" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="Main Container" type="VBoxContainer" parent="Options"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Title" type="HBoxContainer" parent="Options/Main Container"]
modulate = Color(0.254902, 0.678431, 1, 1)
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Options/Main Container/Title"]
layout_mode = 2
texture = ExtResource("1_hqi70")
stretch_mode = 3
flip_h = true

[node name="Label" type="Label" parent="Options/Main Container/Title"]
layout_mode = 2
text = "Options"

[node name="TextureRect2" type="TextureRect" parent="Options/Main Container/Title"]
layout_mode = 2
texture = ExtResource("1_hqi70")
stretch_mode = 3

[node name="Menu" type="VBoxContainer" parent="Options/Main Container"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="Sensitivity" type="HBoxContainer" parent="Options/Main Container/Menu"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="Options/Main Container/Menu/Sensitivity"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
theme_override_font_sizes/font_size = 50
text = "Sensitivity"
horizontal_alignment = 1

[node name="sens slider" type="HSlider" parent="Options/Main Container/Menu/Sensitivity"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
theme_override_styles/slider = SubResource("StyleBoxLine_vplel")
min_value = 1.0
max_value = 10.0
step = 0.5
value = 1.0

[node name="sens value" type="Label" parent="Options/Main Container/Menu/Sensitivity"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
theme_override_font_sizes/font_size = 50
text = "1
"
horizontal_alignment = 1

[node name="Music" type="HBoxContainer" parent="Options/Main Container/Menu"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="Options/Main Container/Menu/Music"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
theme_override_font_sizes/font_size = 50
text = "Music"
horizontal_alignment = 1

[node name="music slider" type="HSlider" parent="Options/Main Container/Menu/Music"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
theme_override_styles/slider = SubResource("StyleBoxLine_vplel")
value = 50.0

[node name="music value" type="Label" parent="Options/Main Container/Menu/Music"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
theme_override_font_sizes/font_size = 50
text = "50"
horizontal_alignment = 1

[node name="SFX" type="HBoxContainer" parent="Options/Main Container/Menu"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="Options/Main Container/Menu/SFX"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
theme_override_font_sizes/font_size = 50
text = "SFX"
horizontal_alignment = 1

[node name="sfx slider" type="HSlider" parent="Options/Main Container/Menu/SFX"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
theme_override_styles/slider = SubResource("StyleBoxLine_vplel")
value = 50.0

[node name="sfx value" type="Label" parent="Options/Main Container/Menu/SFX"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
theme_override_font_sizes/font_size = 50
text = "50
"
horizontal_alignment = 1

[node name="options back" type="Button" parent="Options/Main Container"]
layout_mode = 2
size_flags_horizontal = 4
text = "Back"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_gw0gy")
autoplay = true
bus = &"Music"

[connection signal="pressed" from="Main Screen/Main Container/Menu/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Main Screen/Main Container/Menu/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Main Screen/Main Container/Menu/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Main Screen/Main Container/Menu/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Credits/Main Container/credits back" to="." method="_on_credits_back_pressed"]
[connection signal="value_changed" from="Options/Main Container/Menu/Sensitivity/sens slider" to="." method="_on_sens_slider_value_changed"]
[connection signal="value_changed" from="Options/Main Container/Menu/Music/music slider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="Options/Main Container/Menu/SFX/sfx slider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="Options/Main Container/options back" to="." method="_on_options_back_pressed"]
